<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/main_header">

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreferenceCompat
            app:key="visualGen"
            app:summaryOff="@string/visual_maze_generation_summary_off"
            app:summaryOn="@string/visual_maze_generation_summary_on"
            app:title="@string/visual_maze_generation_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="KeepGenOptis"
            app:summaryOff="@string/kgo_summary_off"
            app:summaryOn="@string/kgo_summary_on"
            app:title="@string/keep_gen_opti_title"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc_header">

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

        <SwitchPreferenceCompat
            app:key="rainbowCharacter"
            app:summaryOff="@string/rainbow_summary_off"
            app:summaryOn="@string/rainbow_summary_on"
            app:title="@string/rainbow_title"
            app:defaultValue="false" />
<!--        app:dependency="rainbowCharacter"-->

        <SwitchPreferenceCompat
            app:key="vibrations"
            app:summaryOff="@string/vibrations_summary_off"
            app:summaryOn="@string/vibrations_summary_on"
            app:title="@string/vibrations_title"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>